# ansible-role-for-splunk

./: .actrc  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  TBD  Taskfile.yml  active_context.md  inventory.ini  justfile  pyproject.toml
.github/workflows/: test-splunk-framework.yml
.kilocode/: mcp.json
.kiro/specs/pr-252-review-fixes/: design.md  progress.txt  requirements.md  tasks.md
playbooks/: splunk_install_or_upgrade.yml
testing/: .env  .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  SPRINT_LOG.md  TESTING_PROGRESS.md  Taskfile.yml  run-tests.sh
testing/.secrets/: ansible_password  id_rsa  id_rsa.pub
testing/docker-images/almalinux9-simple/: Dockerfile
testing/docker-images/almalinux9-systemd-sshd/: Dockerfile
testing/docker-images/ansible-controller/: .dockerignore  Dockerfile
testing/docker-images/ansible-controller-simple/: Dockerfile
testing/docker-images/ansible-simple/: Dockerfile
testing/docker-images/ansible-webterminal/: Dockerfile
testing/docker-images/centos9-systemd-sshd/: Dockerfile
testing/docker-images/git-server/: Dockerfile
testing/docker-images/gitlab/: Dockerfile
testing/docker-images/molecule-runner/: Dockerfile
testing/docker-images/ubuntu2204-simple/: Dockerfile
testing/docker-images/ubuntu2204-systemd-sshd/: Dockerfile
testing/docker-images/webtop-minimal/: Dockerfile
testing/molecule/: download.yml
testing/molecule-scenarios/default/: converge.yml  inventory.yml  molecule.yml  prepare.yml
testing/molecule/bootstrap/: converge.yml  molecule.yml  (+3 more)
testing/scripts/: justfile
(+33 files in other folders)
