[project]
name = "splunk-testing-framework"
version = "0.1.0"
description = "Docker + Molecule testing framework for ansible-role-for-splunk"
requires-python = ">=3.10"
dependencies = [
    "ansible>=8.0.0",
    "molecule>=6.0.0", 
    "molecule-docker>=2.1.0",
    "ansible-lint>=6.0.0",
    "yamllint>=1.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
]